--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -1,6 +1,6 @@
 CC = x86_64-w64-mingw32-gcc
 CFLAGS = -mno-red-zone -Iinclude/ -c  
-SRC = $(wildcard *[(.c)|(.s)] */*[(.c)|(.s)])
+SRC = $(wildcard *.c *.s */*.c */*.s)
 OBJ = *.o
 
 librc.a: $(SRC) 
