--- a/kernel/makefile
+++ b/kernel/makefile
@@ -1,13 +1,14 @@
 CC = x86_64-w64-mingw32-gcc
+AS = x86_64-w64-mingw32-as
 LD = x86_64-w64-mingw32-ld
 INCLUDE = -Iinclude -I../lib/rclib/include
 LDSCRIPTS = ../ldscripts/kernel_script.ld
-CFLAGS = -ffreestanding  -mno-red-zone -fPIC -Wall -Wno-varargs  $(INCLUDE) -c 
+CFLAGS = -ffreestanding  -mno-red-zone -fPIC -Wall -Wno-varargs  $(INCLUDE)
 LDFLAGS =  -nostdlib -T $(LDSCRIPTS) --image-base=0 --gc-sections -shared --subsystem 0 -e kernel_entry -o
 LIB = ../lib/rclib/librc.a
 DIR := $(filter-out $(wildcard *.*) include ,$(wildcard *))
 SRC := $(wildcard $(foreach dir,$(DIR),$(dir)/*[.c|.s]) *.c *.s ../utils/*.c ../utils/*.s)
-OBJS := $(addsuffix .o,$(foreach path, $(basename $(SRC)),$(lastword $(subst /, ,$(path)))))
+OBJS := $(patsubst %.s, %.o, $(patsubst %.c, %.o, $(SRC)))
 TARGET = RTcore.rm 
 mount = EFI/BOOT
 IMG = ../resources/RTOS_1.0.iso
@@ -15,14 +16,16 @@ TEST= qemu-system-x86_64
 CPU = Nehalem
 BIOS= ../resources/OVMF.fd
 FONT = ../resources/*.psf
-var := $(shell sudo losetup -f)
+BOOT_IMAGE = ../boot/BOOTx64.EFI
 
+debug: 
 
-$(TARGET): $(SRC) $(LIB)
-	$(CC) $(CFLAGS) $(SRC)
-	$(LD) $(LDFLAGS) $@ $(OBJS) $(LIB)
+$(TARGET): $(OBJS) $(LIB) 
+	$(LD) $(LDFLAGS) $@ $^
 
-img: ../boot/BOOTx64.EFI
+#Used only for debug
+img: $(BOOT_IMAGE)
+	$(eval var := $(shell sudo losetup -f))
 	sudo losetup --offset 1048576 --sizelimit 52428800 $(var) $(IMG)
 	mkdir mnt/
 	sudo mount $(var) mnt/
@@ -36,5 +39,5 @@ test: $(IMG)
 	$(TEST) -cpu $(CPU) -bios $(BIOS) -drive file=$(IMG),if=ide
 
 .PHONY: clean
-clean: 
-	rm -rf *.o *.su
+clean:
+	rm -rf $(OBJS) *.su
