--- a/lib/refi/makefile
+++ b/lib/refi/makefile
@@ -1,6 +1,6 @@
 CC = x86_64-w64-mingw32-gcc
 AS = x86_64-w64-mingw32-as
-CFLAGS = -mno-red-zone -Wno-varargs -I../../boot/include/ 
+CFLAGS = -mno-red-zone -I../../boot/include/ 
 SRC = $(wildcard *.c)
 OBJS = $(patsubst %.c, %.o, $(SRC))
 
