--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -1,6 +1,6 @@
-CC = x86_64-w64-mingw32-gcc
-AS = x86_64-w64-mingw32-as
-CFLAGS = -mno-red-zone -Iinclude/ 
+include ../../makefile.default
+
+CFLAGS = -mno-red-zone $(INCLUDE)
 SRC = $(wildcard *.c *.s */*.c */*.s)
 OBJS = $(patsubst %.s, %.o, $(patsubst %.c, %.o, $(SRC)))
 
