--- a/boot/makefile
+++ b/boot/makefile
@@ -2,19 +2,14 @@ include ../makefile.default
 
 LDSCRIPTS = ../ldscripts/boot_script.ld
 CFLAGS += -fstack-limit-symbol=0x7ffe0000 
-LDFLAGS += -T$(LDSCRIPTS) 
 LIB = ../lib/refi/librefi.a 
 
-TARGET = BOOTx64.EFI
+TARGET =BOOTx64.EFI
+include ../update-rules.inc
 
-build:
-	@echo Building Bootloader!
-	make -C $(TARGET)
+build: build-objects $(TARGET)
 
 $(TARGET): $(OBJS) $(LIB)
-	$(LD) $(LDFLAGS) $@ $(OBJS) $(LIB)
-	
-	
-.PHONY:
-clean:
-	rm -rf *.o *.map 
+	@echo "$(BLUE)$(BOLD)$(UPDATE) bootloader $(TARGET)$(END)"
+	@$(LD) $(LDFLAGS) $@ $^
+
