--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -3,7 +3,7 @@ include ../../makefile.default
 TARGET =librc.a
 include ../../update-rules.inc
 
-build: build-objects $(TARGET)
+build: $(TARGET) | build-objects
 
 $(TARGET): $(OBJS)
 	@echo "$(BLUE)$(BOLD)$(UPDATE) file $(TARGET)$(END)"
