The build system has been vastly improved. Text will be pretty printed by default, but can be disabled by option make build PRETTY_PRINT=DISABLE

--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -7,5 +7,5 @@ build: $(TARGET) | build-objects
 
 $(TARGET): $(OBJS)
 	@echo "$(BLUE)$(BOLD)$(UPDATE) file $(TARGET)$(END)"
-	@ar $(LIB_FLAGS) $@ $(OBJS)		
+	@ar $(LIBFLAGS) $@ $(OBJS)		
 	
