Updated librc makefile

--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -6,6 +6,6 @@ include ../../update-rules.inc
 build: $(TARGET) | build-objects
 
 $(TARGET): $(OBJS)
-	@echo "$(BLUE)$(BOLD)$(UPDATE) file $(TARGET)$(END)"
+	@echo "$(BLUE)$(BOLD)$(UPDATE) library $(TARGET)$(END)"
 	@ar $(LIBFLAGS) $@ $(OBJS)		
 	
