--- a/boot/makefile
+++ b/boot/makefile
@@ -2,7 +2,9 @@ include ../makefile.default
 
 LDSCRIPTS = ../ldscripts/boot_script.ld
 CFLAGS += -fstack-limit-symbol=0x7ffe0000 
-LIB = ../lib/refi/librefi.a 
+LIBPATH :=../lib/refi
+LIB =$(LIBPATH)/librefi.a 
+
 
 TARGET =BOOTx64.EFI
 include ../update-rules.inc
@@ -13,3 +15,5 @@ $(TARGET): $(OBJS) $(LIB)
 	@echo "$(BLUE)$(BOLD)$(UPDATE) bootloader $(TARGET)$(END)"
 	@$(LD) $(LDFLAGS) $@ $(OBJS) $(LIB)
 
+$(LIB): 
+	cd $(LIBPATH) && $(MAKE) build
