--- a/kernel/makefile
+++ b/kernel/makefile
@@ -3,7 +3,8 @@ include ../makefile.default
 #kernel compilation flags
 LDSCRIPTS =../ldscripts/kernel_script.ld
 CFLAGS += -Wall
-LIB = ../lib/rclib/librc.a 
+LIBPATH :=../lib/rclib
+LIB =$(LIBPATH)/librc.a 
 TARGET =RTcore.rm
 include ../update-rules.inc
 
@@ -12,3 +13,6 @@ build: $(TARGET) | build-objects
 $(TARGET): $(OBJS) $(LIB)
 	@echo "$(BLUE)$(BOLD)$(UPDATE) module $(TARGET)$(END)"
 	@$(LD) $(LDFLAGS) $@ $^
+
+$(LIB):
+	cd $(LIBPATH) && $(MAKE) build
