--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -3,9 +3,9 @@ include ../../makefile.default
 TARGET =librc.a
 include ../../update-rules.inc
 
-build: $(TARGET) | build-objects
+build: $(TARGET)
 
-$(TARGET): $(OBJS)
+$(TARGET): build-objects
 	@echo "$(BLUE)$(BOLD)$(UPDATE) library $(TARGET)$(END)"
 	@ar $(LIBFLAGS) $@ $(OBJS)		
 	
