--- a/lib/refi/makefile
+++ b/lib/refi/makefile
@@ -2,9 +2,9 @@ include ../../makefile.default
 
 TARGET =librefi.a
 include ../../update-rules.inc
-build: $(TARGET) | build-objects
+build: $(TARGET)
 
-$(TARGET): $(OBJS)
+$(TARGET): build-objects
 	@echo "$(BLUE)$(BOLD)$(UPDATE) library $(TARGET)$(END)"
 	@ar $(LIBFLAGS) $@ $(OBJS)
 	
