--- a/lib/rclib/makefile
+++ b/lib/rclib/makefile
@@ -5,7 +5,7 @@ include ../../update-rules.inc
 
 build: $(TARGET)
 
-$(TARGET): build-objects
+$(TARGET): $(OBJS)
 	@echo "$(BLUE)$(BOLD)$(UPDATE) library $(TARGET)$(END)"
-	@ar $(LIBFLAGS) $@ $(OBJS)		
+	@ar $(LIBFLAGS) $@ $^		
 	
