--- a/lib/refi/makefile
+++ b/lib/refi/makefile
@@ -4,7 +4,7 @@ TARGET =librefi.a
 include ../../update-rules.inc
 build: $(TARGET)
 
-$(TARGET): build-objects
+$(TARGET): $(OBJS)
 	@echo "$(BLUE)$(BOLD)$(UPDATE) library $(TARGET)$(END)"
-	@ar $(LIBFLAGS) $@ $(OBJS)
+	@ar $(LIBFLAGS) $@ $^
 	
