--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,7 +5,7 @@ SRC +=$(wildcard ../utils/*.c ../utils/*.s)
 LDSCRIPTS =../ldscripts/kernel_script.ld
 CFLAGS += -Wall
 LIBHEADER += -Ilib/rclib/
-LIBRCPATH :=/lib/rclib
+LIBRCPATH :=lib/rclib
 LIBRC :=$(LIBRCPATH)/librc.a
 LIB += $(LIBRC)
 TARGET :=RTcore.rm
